--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
