modulo enviar correo registro

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14"
   }
 }
