--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^16.0.3",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
